syntax = "proto3";

package raft;

service raft {
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
}

message AppendEntriesRequest {
  uint64 term = 1;
  string leaderId = 2;
  uint64 prevLogIndex = 3;
  uint64 prevLogTerm = 4;
  repeated LogEntry entries = 5;
  uint64 leaderCommit = 6;
}

message AppendEntriesResponse {
  uint64 term = 1;
  bool success = 2;
}

message LogEntry {
  uint64 term = 1;
  string command = 2;
}

// The request message for the RequestVote RPC.
message RequestVoteRequest {
  uint64 term = 1;
  string candidateId = 2;
  uint64 lastLogIndex = 3;
  uint64 lastLogTerm = 4;
}

// The response message for the RequestVote RPC.
message RequestVoteResponse {
  uint64 term = 1;
  bool voteGranted = 2;
}
